fix style on mobile v1.0.4

--- a/src/components/Chart/chart.css
+++ b/src/components/Chart/chart.css
@@ -23,14 +23,15 @@
     padding-top: 15px;
     /*height: 100px;*/
 }
+
 .chart-presenter__tab-content {
     display: flex;
     flex-direction: column;
 }
 
 .songs-per-day {
-    height: 45px;
-    width: 100%;
+    /*height: 45px;*/
+    /*width: 100%;*/
     text-align: center;
     padding-left: 5px;
     border-radius: 3px;
@@ -64,13 +65,12 @@
 }
 
 .chart-header__left_dock {
-    width: 200px;
+    /*width: 200px;*/
     text-align: left;
 }
 
 .pick-your-date {
     height: 70px;
-    width: inherit;
     padding-top: 10px;
     padding-left: 10px;
     border: 1px solid #faebcc;
@@ -130,7 +130,6 @@
     margin-left: 5px;
 }
 
-
 @media screen and (min-width: 700px) {
     .chart-header {
         height: 120px;
@@ -142,9 +141,8 @@
     .update-info {
         flex-flow: row;
     }
+
     .chart-presenter__tab-content {
-     margin-left: 100px;
-        margin-right: 100px;
         min-width: 760px;
     }
 
