--- a/src/components/FilteringOptions/FilteringOptions.css
+++ b/src/components/FilteringOptions/FilteringOptions.css
@@ -10,7 +10,7 @@
     margin-right: 3px;
     margin-bottom: 5px;
     text-align: right;
-    max-width: 35px;
+    max-width: 30px;
     border: 1px solid lightgray;
 }
 
@@ -25,7 +25,7 @@
     justify-content: space-around;
     padding-top: 5px;
     border: 1px solid #bce8f1;
-    padding-left: 10px;
+    padding-left: 8px;
     font-size: smaller;
     /*overflow-y: scroll;*/
     border-radius: 3px;
