--- a/src/components/Playlist/playlist.css
+++ b/src/components/Playlist/playlist.css
@@ -89,7 +89,7 @@
     text-align: center;
     margin: 1px 1px 1px 1px;
     padding: 5px;
-    background-color: snow;
+    background-color: inherit;
     max-width: 290px;
 }
 
@@ -107,7 +107,7 @@
     padding: 5px;
     margin: 1px;
     align-self: flex-start;
-    background-color: snow;
+    background-color: #d1eec7;
 }
 
 /*.row-spotify-search__track_view > div {*/
@@ -118,12 +118,12 @@
     color: green;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 640px) {
     [class^="row-spotify-search__root"] > div {
         display: flex;
         flex-direction: row;
         align-self: flex-start;
-        min-width: 650px;
+        /*min-width: 650px;*/
     }
 
     .spotify-search {
